Fixing Vert.x tests